2.2.3 - Some fixes for the new sticky header instead of the floating title - Keeping the 5 floating title changes for now - New screenshot for dark mode

--- a/themes.local/feedmei+.css
+++ b/themes.local/feedmei+.css
@@ -61,7 +61,8 @@ div.cdm.expanded {
 .content h1,
 .content h2,
 .content h3,
-.content h4 {
+.content h4,
+.content h4 strong {
 	font-family: "PT Sans", sans-serif !important;
 	font-size: 19px !important;
 }
